REGRESSION(r228260):WebHTMLView beeps at every keydown for Chinese/Japanese/Korean Input Method https://bugs.webkit.org/show_bug.cgi?id=184231

Reviewed by Alexey Proskuryakov.

The bug was caused by EventHandler::internalKeyEvent calling setDefaultHandled and expecting it to stay true
after dispatching the event even though m_defaultHandled is always cleared after r228260. This results in
EventHandler::internalKeyEvent returning false, and resulting in a beep.

Unfortunately, no new tests since there is no facility to detect this case in layout tests, and we can't
easily emulate or trigger a real input method in API tests.

* page/EventHandler.cpp:
(WebCore::EventHandler::internalKeyEvent):


Canonical link: https://commits.webkit.org/199793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230173 268f45cc-cd09-0410-ab3c-d52691b4dbfc